; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_cue.c_skip_utf8_bom.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_cue.c_skip_utf8_bom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"\EF\BB\BF\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @skip_utf8_bom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_utf8_bom(i32 %0) #0 {
  %2 = alloca %struct.bstr, align 4
  %3 = alloca %struct.bstr, align 4
  %4 = getelementptr inbounds %struct.bstr, %struct.bstr* %3, i32 0, i32 0
  store i32 %0, i32* %4, align 4
  %5 = getelementptr inbounds %struct.bstr, %struct.bstr* %3, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @bstr_startswith0(i32 %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = getelementptr inbounds %struct.bstr, %struct.bstr* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @bstr_cut(i32 %11, i32 3)
  %13 = getelementptr inbounds %struct.bstr, %struct.bstr* %2, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  br label %17

14:                                               ; preds = %1
  %15 = bitcast %struct.bstr* %2 to i8*
  %16 = bitcast %struct.bstr* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 %16, i64 4, i1 false)
  br label %17

17:                                               ; preds = %14, %9
  %18 = getelementptr inbounds %struct.bstr, %struct.bstr* %2, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}

declare dso_local i64 @bstr_startswith0(i32, i8*) #1

declare dso_local i32 @bstr_cut(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
